* Mise à jour du README * Mise à jour des membres actifs de l’équipe * Ajout de styles pour l’hyphenation du contenu

--- a/colophon.html
+++ b/colophon.html
@@ -27,31 +27,51 @@
 
 <h2 id="equipe">L'équipe</h2>
 <p>Les traducteurs et relecteurs de ce magazine viennent d'horizons divers&nbsp;: professionnels indépendants ou en entreprises, étudiants, professeurs&#8230; Ils ont pourtant un point commun&nbsp;: la création web, c'est leur grande passion.</p>
+
 <ul>
-    <li><a href="http://pouipouidesign.net/" title="Le site personnel de Marie Alhomme">Marie Alhomme</a> (membre honoraire)</li>
+[(#REM) Templates and unknown activy
+    <li><a href="https://twitter.com/" title="machin sur Twitter">machin</a></li>
+    <li><a href="" title="Le site personnel de machin">machin</a></li>
+    <li><a href="" title="machin">machin</a></li>
+
+    <li><a title="Augustin Chassigne">Augustin Chassigne</a></li>
+    <li><a title="Tanguy Martin">Tanguy Martin</a></li>
+    <li><a title="Jérôme Pasquelin">Jérôme Pasquelin</a></li>
+    <li><a title="Bertand Keller">Bertand Keller</a></li>
+]
     <li><a href="http://arkhi.org/" title="Le site personnel de Fabien Basmaison">Fabien Basmaison</a> (administrateur)</li>
+    <li><a href="https://twitter.com/verobouvier" title="Véronique Bouvier sur Twitter">Véronique Bouvier</a></li>
+    <li><a href="http://blog.userland.fr/" title="Le site personnel de Goulven Champenois">Goulven Champenois</a> (administrateur)</li>
+    <li>Frédéric Chotard</li>
+    <li><a href="https://twitter.com/caslantienne" title="Nicolas Contant sur Twitter">Nicolas Contant</a></li>
+    <li><a href="https://twitter.com/nfroidure" title="Nicolas Froidure sur Twitter">Nicolas Froidure</a></li>
+    <li><a href="http://contenuvivace.wordpress.com/" title="Le site personnel d'Evren Kiefer">Evren Kiefer</a></li>
+    <li><a href="https://twitter.com/Voulf" title="Adrien Leygues sur Twitter">Adrien Leygues</a></li>
+    <li><a href="https://twitter.com/b_proust" title="Blandine Proust sur Twitter">Blandine Proust</a></li>
+    <li><a href="https://twitter.com/or3lie" title="Aurélie Rigouste sur Twitter">Aurélie Rigouste</a></li>
+    <li><a href="https://twitter.com/DirtyF" title="Frank Taillandier sur Twitter">Frank Taillandier</a></li>
+</ul>
+
+<h2 id="previously">Ils sont passés par là</h2>
+<ul>
+    <li><a href="http://pouipouidesign.net/" title="Le site personnel de Marie Alhomme">Marie Alhomme</a></li>
     <li><a href="http://freelancis.com/" title="Le site personnel de Gaspard Beernaert">Gaspard Beernaert</a></li>
     <li><a href="http://climbtothestars.org/" title="Le site personnel de Stephanie Booth">Stephanie Booth</a> (direction honoraire)</li>
     <li>Michel Cadennes</li>
     <li><a href="http://ac-graphic.net/" title="Le site personnel d'Antoine Cailliau">Antoine Cailliau</a></li>
-    <li><a href="http://blog.userland.fr/" title="Le site personnel de Goulven Champenois">Goulven Champenois</a></li>
-    <li>Frédéric Chotard</li>
-    <li><a href="http://nota-bene.org/" title="Le site personnel de Stéphane Deschamps">Stéphane Deschamps</a> (membre honoraire)</li>
-    <li>Jean‑Rémy Duboc (membre honoraire)</li>
+    <li><a href="http://nota-bene.org/" title="Le site personnel de Stéphane Deschamps">Stéphane Deschamps</a></li>
+    <li>Jean‑Rémy Duboc</li>
     <li><a href="http://www.la-grange.net/" title="Le site personnel de Karl Dubost">Karl Dubost</a></li>
     <li><a href="http://pierre.equoy.free.fr/" title="Le site personnel de Pierre Equoy">Pierre Equoy</a> (administrateur)</li>
-    <li><a href="http://tw.apinc.org/" title="Le site personnel de Steve Frécinaux">Steve Frécinaux</a> (administrateur)</li>
+    <li><a href="http://log.istique.net/" title="Le site personnel de Steve Frécinaux">Steve Frécinaux</a></li>
     <li>Renaud Gaudin</li>
-    <li><a href="http://phiji.fr/" title="Le site personnel de Philippe Janvier">Philippe Janvier</a> (administrateur)</li>
-    <li><a href="http://contenuvivace.wordpress.com/" title="Le site personnel d'Evren Kiefer">Evren Kiefer</a></li>
+    <li><a href="http://phiji.fr/" title="Le site personnel de Philippe Janvier">Philippe Janvier</a></li>
     <li><a href="http://mammouthland.net/" title="Le site personnel de Pascale Lambert-Charreteur">Pascale Lambert‑Charreteur</a></li>
-    <li><a href="http://latchman.org/" title="Le site personnel de Samuel Latchman">Samuel Latchman</a> (membre honoraire)</li>
+    <li><a href="http://latchman.org/" title="Le site personnel de Samuel Latchman">Samuel Latchman</a></li>
     <li>Pierre‑Henri Lavigne</li>
     <li>Sylvain Lelièvre</li>
-    <li><a href="http://adrien.leygues.free.fr/" title="Le site personnel d'Adrien Leygues">Adrien Leygues</a></li>
     <li><a href="http://wduk.co.uk/" title="Le site personnel de Leo Ludwig">Leo Ludwig</a></li>
     <li><a href="http://nicoblog.net/" title="Le site personnel de Nicolas Nutten">Nicolas Nutten</a></li>
-    <li><a href="http://twitter.com/b_proust" title="Blandine Proust sur Twitter">Blandine Proust</a></li>
     <li>Samuel Rossetti</li>
     <li>Fay Sainte‑Rose</li>
     <li>Ismaël Touama</li>
