URL du site d’Evren modifiée

--- a/colophon.html
+++ b/colophon.html
@@ -45,7 +45,7 @@
     <li>Frédéric Chotard</li>
     <li><a href="https://twitter.com/caslantienne" title="Nicolas Contant sur Twitter">Nicolas Contant</a></li>
     <li><a href="https://twitter.com/nfroidure" title="Nicolas Froidure sur Twitter">Nicolas Froidure</a></li>
-    <li><a href="http://contenuvivace.wordpress.com/" title="Le site personnel d'Evren Kiefer">Evren Kiefer</a></li>
+    <li><a href="http://evrenkiefer.com/" title="Le site personnel d'Evren Kiefer">Evren Kiefer</a></li>
     <li><a href="https://twitter.com/Voulf" title="Adrien Leygues sur Twitter">Adrien Leygues</a></li>
     <li><a href="https://twitter.com/b_proust" title="Blandine Proust sur Twitter">Blandine Proust</a></li>
     <li><a href="https://twitter.com/or3lie" title="Aurélie Rigouste sur Twitter">Aurélie Rigouste</a></li>
