--- a/colophon.html
+++ b/colophon.html
@@ -41,12 +41,14 @@
 ]
     <li><a href="http://arkhi.org/" title="Le site personnel de Fabien Basmaison">Fabien Basmaison</a> (administrateur)</li>
     <li><a href="https://twitter.com/verobouvier" title="Véronique Bouvier sur Twitter">Véronique Bouvier</a></li>
+    <li><a href="https://twitter.com/tchevengour" title="Michel Cadennes sur Twitter">Michel Cadennes</a></li>
     <li><a href="http://blog.userland.fr/" title="Le site personnel de Goulven Champenois">Goulven Champenois</a> (administrateur)</li>
     <li>Frédéric Chotard</li>
     <li><a href="https://twitter.com/caslantienne" title="Nicolas Contant sur Twitter">Nicolas Contant</a></li>
     <li><a href="https://twitter.com/nfroidure" title="Nicolas Froidure sur Twitter">Nicolas Froidure</a></li>
     <li><a href="http://evrenkiefer.com/" title="Le site personnel d'Evren Kiefer">Evren Kiefer</a></li>
     <li><a href="https://twitter.com/Voulf" title="Adrien Leygues sur Twitter">Adrien Leygues</a></li>
+    <li><a href="http://www.wduk.co.uk/" title="Le site personnel de Léo Ludwig">Léo Ludwig</a></li>
     <li><a href="https://twitter.com/b_proust" title="Blandine Proust sur Twitter">Blandine Proust</a></li>
     <li><a href="https://twitter.com/or3lie" title="Aurélie Rigouste sur Twitter">Aurélie Rigouste</a></li>
     <li><a href="https://twitter.com/DirtyF" title="Frank Taillandier sur Twitter">Frank Taillandier</a></li>
@@ -57,7 +59,6 @@
     <li><a href="http://pouipouidesign.net/" title="Le site personnel de Marie Alhomme">Marie Alhomme</a></li>
     <li><a href="http://freelancis.com/" title="Le site personnel de Gaspard Beernaert">Gaspard Beernaert</a></li>
     <li><a href="http://climbtothestars.org/" title="Le site personnel de Stephanie Booth">Stephanie Booth</a> (direction honoraire)</li>
-    <li>Michel Cadennes</li>
     <li><a href="http://ac-graphic.net/" title="Le site personnel d'Antoine Cailliau">Antoine Cailliau</a></li>
     <li><a href="http://nota-bene.org/" title="Le site personnel de Stéphane Deschamps">Stéphane Deschamps</a></li>
     <li>Jean‑Rémy Duboc</li>
@@ -70,7 +71,6 @@
     <li><a href="http://latchman.org/" title="Le site personnel de Samuel Latchman">Samuel Latchman</a></li>
     <li>Pierre‑Henri Lavigne</li>
     <li>Sylvain Lelièvre</li>
-    <li><a href="http://wduk.co.uk/" title="Le site personnel de Leo Ludwig">Leo Ludwig</a></li>
     <li><a href="http://nicoblog.net/" title="Le site personnel de Nicolas Nutten">Nicolas Nutten</a></li>
     <li>Samuel Rossetti</li>
     <li>Fay Sainte‑Rose</li>
