--- a/modeles/auteur_url.html
+++ b/modeles/auteur_url.html
@@ -5,7 +5,7 @@
   Modele <auteur_url|nom=NOM> : affiche le nom d’un auteur avec un lien vers son site web
   #MODELE{auteur_url}
 ]<BOUCLE_auteur(AUTEURS) {nom=#ENV{nom}}>
-  <a class="vcard url fn" [href="(#URL_SITE)"] [title="(#NOM_SITE)"]>#NOM</a>
+  <a class="vcard url fn" [href="(#URL_SITE|attribut_html)"] [title="(#NOM_SITE|attribut_html)"]>#NOM</a>
 </BOUCLE_auteur>
 #ENV{nom}
 <//B_auteur>
