minor changes * Le doctype de /colophon et /about est changé en HTML 5. * La boucle pour les unes du sommaire affiche les articles jusqu’au jour‑même. * La page « about » est mise à jour pour refléter la situation actuelle (livres, conférences…).

--- a/about.html
+++ b/about.html
@@ -1,39 +1,31 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr">
+<!DOCTYPE html>
+<html lang="fr"><head>
+  <meta charset="utf-8" />
 
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  
-    <title>Pompage.net - About this site</title>
-  
-<INCLURE{fond=inc_head}>
-</head>
+  <title>Pompage.net - About this site</title>
 
-<body class="autre">
-<div id="site">
+  <INCLURE{fond=inc_head}>
 
-<div id="header">
-<a href="#URL_SITE_SPIP">Pompage - Web design puisé à la source.</a>
-</div> <!-- fin #header -->
+</head><body class="autre">
 
-<INCLURE{fond=inc_navigation}>
+  <div id="site">
+    <div id="header">
+      <a href="#URL_SITE_SPIP">Pompage - Web design puisé à la source.</a>
+    </div><!-- #header -->
 
-<div id="contenu" xml:lang="en" lang="en">
+    <INCLURE{fond=inc_navigation}>
 
-<h1 id="about">About Pompage</h1>
-<p>Pompage magazine was founded by Swiss alpha blogger <a href="http://climbtothestars.org/" title="Stephanie's personal web site" hreflang="en">Stephanie Booth</a> around 2001. Back then, web standards awareness was low in the English-speaking community, and almost inexistent in the French-speaking community. But, mostly in the USA, pionniers were starting to write about standards and modern techniques, educating professionals and amateurs alike. France was lagging behind, so a handful of people decided to start projects on their own. Pompage was one of them.</p> <p>Pompage is specifically dedicated to translating English resources because, even today, the French knowledge base is poor. No book has been written about web standards yet. No conference has been held. In the biggest web agencies, very few have ever heard of  names like Jeffrey Zeldman or Eric Meyer. Our translated articles hopefully help fill the gap by bringing those names and their expertise to the French eyes.</p>
-<p>All the  <a href="/articles">articles</a> on this site are copyrighted by their authors and are translated with their authorization. For any information, please contact the editors using our <a href="/contact">Contact page</a>.</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-</div> <!-- fin #contenu -->
+    <div id="contenu" lang="en">
+      <h1 id="about">About Pompage</h1>
 
+      <p>Pompage magazine was founded by Swiss alpha blogger <a href="http://climbtothestars.org/" title="Stephanie's personal web site" hreflang="en">Stephanie Booth</a> around 2001. Back then, web standards awareness was low in the English-speaking community, and almost inexistent in the French-speaking community. But, mostly in the USA, pionniers were starting to write about standards and modern techniques, educating professionals and amateurs alike. France was lagging behind, so a handful of people decided to start projects on their own. Pompage was one of them.</p>
 
+      <p>Pompage is specifically dedicated to translating English resources because, although a lot better than in 2001, the French knowledge base still needs to grow. In the biggest web agencies, not enough people have heard of names like Jeffrey Zeldman or Eric Meyer. Our translated articles hopefully help fill the gap by bringing those names and their expertise to the French eyes.</p>
 
-<INCLURE{fond=footer}>
+      <p>All the  <a href="/articles">articles</a> on this site are copyrighted by their authors and are translated with their authorization. For any information, please contact the editors using our <a href="/contact">Contact page</a>.</p>
+    </div><!-- #contenu -->
 
+    <INCLURE{fond=footer}>
 
-
-</div> <!-- fin #site -->
-</body>
-</html>
+  </div><!-- #site -->
+</body></html>
