--- a/sommaire.html
+++ b/sommaire.html
@@ -4,9 +4,9 @@
 
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=#CHARSET" />
-  
+
     <title>Pompage.net : le web design puisé à la source</title>
-  
+
 <INCLURE{fond=inc_head}>
 </head>
 
@@ -37,7 +37,7 @@
 
 <B_annonce_une>
       <div id="annonces" class="bloc_une">
-<BOUCLE_annonce_une(ARTICLES) {id_rubrique=5} {age_redac<0} {tout} {par date} {0,1}{inverse}>
+<BOUCLE_annonce_une(ARTICLES) {id_rubrique=5} {age_redac<=0} {tout} {par date} {0,1} {inverse}>
         <h3><a href="#URL_ARTICLE">#TITRE</a> [<strong><small>(#DATE_REDAC|date_relativecourt)&nbsp;!</small></strong> ]</h3>
         <p>[(#DESCRIPTIF|ptobr)] <a href="#URL_ARTICLE" title="[(#TITRE|attribut_html)]" class="plus">Lire l'article.</a></p>
 </BOUCLE_annonce_une>
@@ -47,7 +47,7 @@
       <div id="ancien" class="bloc_une">
         <h2><img src="#CHEMIN{t_precedent.gif}" alt="Éditions précédentes" width="212" height="21" /></h2>
 <BOUCLE_nouveau(ARTICLES){id_rubrique=1}{par date}{1,2}{inverse}>
-        <h3><a href="#URL_ARTICLE">#TITRE</a><B_auteur> 
+        <h3><a href="#URL_ARTICLE">#TITRE</a><B_auteur>
         <span class="auteur">par <BOUCLE_auteur(MOTS) {id_article} {type="Auteur"} {" et "}>#TITRE</BOUCLE_auteur></span></B_auteur></h3>
         <p>[(#DESCRIPTIF|ptobr)] <a href="#URL_ARTICLE" title="[(#TITRE|attribut_html)]" class="plus">Lire l'article.</a></p>
 </BOUCLE_nouveau>
@@ -59,7 +59,7 @@
     <div id="externes">
       <h2><img src="#CHEMIN{t_ailleurs.gif}" alt="Traduit ailleurs" width="241" height="23" /></h2>
 <BOUCLE_ailleurs(BREVES){par date}{inverse}{0,2}>
-      <h3><a href="#URL_SITE">#TITRE</a><B_auteur3> 
+      <h3><a href="#URL_SITE">#TITRE</a><B_auteur3>
       <span class="auteur">par <BOUCLE_auteur3(MOTS) {id_breve} {type="Auteur"}>#TITRE</BOUCLE_auteur3></span></B_auteur3></h3>
       <p>[(#DATE|jour)]/[(#DATE|mois)]/[(#DATE|annee)]
       [ - (#TEXTE|pompage_strip_tags)]
