Update of Piwik tracking code

--- a/footer.html
+++ b/footer.html
@@ -8,6 +8,8 @@
 <!-- Piwik -->
 <script type="text/javascript">
   var _paq = _paq || [];
+  _paq.push(["setDomains", ["*.pompage.net"]]);
+  _paq.push(["setDoNotTrack", true]);
   _paq.push(["trackPageView"]);
   _paq.push(["enableLinkTracking"]);
 
@@ -20,6 +22,6 @@
   })();
 </script>
 <!-- End Piwik Code -->
-<noscript><p><img
-src="http://stats.pompage.net/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
-<!-- End Piwik Tracking Code -->
+<!-- Piwik Image Tracker -->
+<noscript><img src="http://stats.pompage.net/piwik.php?idsite=1&amp;rec=1" style="border:0" alt="" /></noscript>
+<!-- End Piwik -->
